--- a/src/components/ControlButton/Index.sass
+++ b/src/components/ControlButton/Index.sass
@@ -3,6 +3,7 @@
 	align-items: center
 	label
 		color: #282c34
+		width: 50%
 	input
 		font-size: 2rem
 		width: auto
@@ -11,9 +12,9 @@
 		height: 50px
 		margin: 5px
 		text-align: center
+		background: transparent
 	button
 		display: flex
-		align-items: center
 		justify-content: center
 		height: 40px
 		width: 40px
