--- a/src/components/ControlBar/Index.sass
+++ b/src/components/ControlBar/Index.sass
@@ -1,2 +1,7 @@
-.sidebar
-	width: 100%
+.control-bar
+	flex: 2
+	padding: 0 15px 20px
+	background: rgba(255,255,255, 0.8)
+	border: 4px solid darkgray
+	border-radius: 2px
+	
