config effect.act

--- a/src/components/ControlButton/Index.sass
+++ b/src/components/ControlButton/Index.sass
@@ -1,6 +1,7 @@
 .control-button
 	display: flex
 	align-items: center
+	margin: 0 0 10px
 	label
 		color: #282c34
 		width: 50%
@@ -24,3 +25,5 @@
 		color: #f90
 		font-weight: bolder
 		font-size: 2rem
+	.btn-s
+		text-align: center		
