set string-number func

--- a/src/components/ControlButton/Index.sass
+++ b/src/components/ControlButton/Index.sass
@@ -1,6 +1,7 @@
 .control-button
 	display: flex
 	align-items: center
+	justify-content: space-between
 	margin: 0 0 10px
 	label
 		color: #282c34
@@ -26,4 +27,5 @@
 		font-weight: bolder
 		font-size: 2rem
 	.btn-s
-		text-align: center		
+		text-align: center
+		width: 50px
