--- a/src/components/ControlBar/Index.sass
+++ b/src/components/ControlBar/Index.sass
@@ -1,7 +1,24 @@
 .control-bar
-	flex: 2
-	padding: 0 15px 20px
-	background: rgba(255,255,255, 0.8)
-	border: 4px solid darkgray
-	border-radius: 2px
-	
+  flex: 2
+  padding: 0 15px 20px
+  background: rgba(255, 255, 255, 0.8)
+  border: 4px solid darkgray
+  border-radius: 2px
+  position: relative
+  transition: 0.4s all
+
+  &:after
+    transition: 0.4s all
+    top: 0
+    left: 0
+    content: ''
+    position: absolute
+    width: 100%
+    height: 100%
+    z-index: -1
+    background-color: rgba(255, 255, 255, 0.0)
+
+  &.disable
+    &:after
+      z-index: 2
+      background-color: rgba(255, 255, 255, 0.75)
