--- a/src/components/Header/Index.sass
+++ b/src/components/Header/Index.sass
@@ -6,3 +6,17 @@
 	margin: 0 0 2rem
 	h1
 		text-transform: uppercase
+
+.btn-login
+	height: 35px
+	line-height: 25px
+	cursor: pointer
+	background: white
+	border-radius: 4px
+	color: black
+	outline: none
+	border: none
+	position: absolute
+	right: 15px
+	top: 25px
+
